was ugly: had unneeded dependencies

--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "1.0.0",
   "description": "Web- and Chrome-extension to block all images with male genitalia",
   "main": "index.js",
-  "dependencies": {
-    "@tensorflow/tfjs-node": "^1.1.2",
-    "sharp": "^0.22.1"
-  },
-  "devDependencies": {
-    "@tensorflow/tfjs": "^1.1.2",
-    "gulp": "^4.0.0",
-    "http-server": "^0.11.1"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
