--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
     rev: v1.0.3
     hooks:
       - id: gitlab-ci-linter
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.910" # Use the sha / tag you want to point at
+    hooks:
+      - id: mypy
